feat: add consumer account auth
